--- a/solution-hw1/style.css
+++ b/solution-hw1/style.css
@@ -1,3 +1,11 @@
 .logo {
     width: 400px;
 }
+
+
+.line{
+    width: 112px;
+    height: 47px;
+    border-bottom: 1px solid black;
+    position: absolute;
+    }
