--- a/solution-hw1/style.css
+++ b/solution-hw1/style.css
@@ -10,6 +10,11 @@ header {
     border-top: 2px solid black; 
     width: 100%;
     position: absolute;
-    top: 0%;
+    top: 50%;
     transform: translateY(-50%);
+}
+
+h2 {
+    
+
 }
