--- a/solution-hw1/style.css
+++ b/solution-hw1/style.css
@@ -4,14 +4,7 @@
 }
 
 
-.line {
-    border-top: 2px solid black; 
-    width: 100%;
-    position: absolute;
-    top: 100%;
-}
-
-body {
-    max-width: 900px;
+main {
     margin: auto;
+    text-align: center;
 }
