--- a/solution-hw1/style.css
+++ b/solution-hw1/style.css
@@ -1,6 +1,5 @@
 .logo {
     width: 400px;
-    text-align: left;
 
 }
 
@@ -11,7 +10,7 @@
 }
 
 
-body {
+main {
     margin: auto;
     text-align: center;
     width: 400px;
