--- a/solution-hw2/style.css
+++ b/solution-hw2/style.css
@@ -1,6 +1,18 @@
+header {
+    position: flex;
+}
+
 .logo {
     width: 400px; /* adjusts the size of the logo */
+    position: relative;
     
+}
+
+
+.line {
+    flex: 1;
+    border-top: 3px solid black; /* Adjust line style as needed */
+    width: calc(100%-400px);
 }
 
 .tabs { /* fixes the style of the navigation tabs */
