--- a/solution-hw2/style.css
+++ b/solution-hw2/style.css
@@ -36,14 +36,14 @@ header {
 
 .cart-icon {
     position: absolute;
-    top: -15px; /* Adjust as needed */
-    right: -25px; /* Adjust as needed */
-    width: 20px; /* Adjust as needed */
-    height: 20px; /* Adjust as needed */
+    top: -15px; 
+    right: -25px; 
+    width: 20px; 
+    height: 20px; 
     background-color: red;
-    border-radius: 50% / 70%;
+    border-radius: 50% / 80%;
     color: white;
-    font-size: 12px; /* Adjust as needed */
+    font-size: 12px; 
     display: flex;
     justify-content: center;
     align-items: center;
@@ -118,16 +118,56 @@ main { /* aligns all of the main content to the center */
 
 .grid-container3 {
     display: grid;
-    grid-template-rows: 2;
-    grid-template-columns: 2;
-    justify-content: center;
+    grid-template-columns: repeat(3, auto); /* Two columns */
+    justify-content: center; /* Center the grid horizontally */
+    gap: 20px;
+    margin-top: 100px;
+    position: relative;
 }
 
-.grid-item3 img {
-    width: 200px;
-    height: 200px;
-    justify-content: center;
+.grid-item3-price {
+    text-align: right;
+    margin-top: 50px;
+    margin-left: 0px;
+    margin-right: 0px;
 }
+
+.grid-item3-center {
+    margin-top: 20px;
+    margin-left: 100px;
+}
+
+.line-cart {
+    width: 690px;
+    border-top: 5px solid black;
+    position: absolute; 
+    top: 85%; 
+    border-top: 5px solid black;
+    left: 520px; 
+    position: absolute;
+}
+
+.button {
+    margin-top: 130px;
+    margin-left: 100px;
+}
+
+.checkout {
+    top: 100%; 
+    background-color: #fff000;
+    border: 2px solid #000;
+    padding: 15px 20px;
+    color: #000;
+    font-weight: bold; 
+    width: 130px;   
+}
+
+.total {
+    margin-left: 700px;
+    top: 110%;
+}
+
+
 
 /* three different paragraph styles: underlined, underlined and bold, and just bold. */
 
@@ -157,13 +197,15 @@ p3 {
 /* button for checkout */
 
 .checkout {
-    cursor: not-allowed; 
-    background-color: #fff000; 
-    border: 3px solid #000; 
-    padding: 15px 20px; 
-    color: #000; 
-    font-weight: bold;
-    
+    position: absolute;
+    top: 90%; 
+    right: 400px; 
+    background-color: #fff000;
+    border: 2px solid #000;
+    padding: 15px 20px;
+    color: #000;
+    font-weight: bold; 
+    width: 130px;   
 }
 
 /* button for add to cart */
