--- a/solution-hw3/style.css
+++ b/solution-hw3/style.css
@@ -38,12 +38,12 @@ header {
     position: absolute;
     top: -15px; 
     right: -25px; 
-    width: 20px; 
-    height: 20px; 
+    width: 16px; 
+    height: 25px; 
     background-color: red;
-    border-radius: 50% / 80%;
+    border-radius: 50%;
     color: white;
-    font-size: 12px; 
+    font-size: 15px; 
     display: flex;
     justify-content: center;
     align-items: center;
