--- a/solution-hw5/style.css
+++ b/solution-hw5/style.css
@@ -202,7 +202,7 @@ p3 {
 
 /* button for add to cart */
 .addtocart {
-    cursor: not-allowed; 
+    cursor: auto; 
     background-color: #fff000; 
     border: 3px solid #000; 
     padding: 9px 12px; 
