--- a/solution-hw5/style.css
+++ b/solution-hw5/style.css
@@ -122,37 +122,18 @@ main { /* aligns all of the main content to the center */
 
 
 
-
-.grid-container3 {
-    display: grid;
-    grid-template-columns: repeat(3, auto); /* Two columns */
-    justify-content: center; /* Center the grid horizontally */
-    gap: 20px;
-    margin-top: 100px;
-    position: relative;
-}
-
-
-.grid-item3-price {
-    text-align: right;
-    margin-top: 50px;
-    position: relative;
-    left: 20px;
-}
-
 .total {
     left: 810px;
     position: relative;
     margin-top: 40px;
 }
 .line-cart {
-    width: 555px;
+    width: 620px;
     border-top: 5px solid black;
-    position: absolute; 
-    top: 85%; 
+    position: relative;  
     border-top: 5px solid black;
-    left: 590px; 
-    position: absolute;
+    left: 500px; 
+    margin-top: 0px;
 }
 
 .addtocart {
@@ -189,15 +170,25 @@ p3 {
 /* button for checkout */
 
 .checkout {
-    position: absolute;
     top: 90%; 
-    right: 565px; 
+    margin-left: 990px; 
     background-color: #fff000;
     border: 2px solid #000;
     padding: 15px 20px;
     color: #000;
     font-weight: bold; 
     width: 130px;   
+}
+
+.remove {
+    font-weight: bold;
+    color: #000;
+    text-decoration: underline;
+    border: none;
+    background-color: transparent;
+    margin-left: 495px;
+    margin-right: 0px;
+    font-size: medium;
 }
 
 /* button for add to cart */
@@ -230,4 +221,37 @@ p3 {
 #product-image {
     width: 600px; /* Adjust width as needed */
     height: 600px; /* Maintain aspect ratio */
+}
+
+.cart-item {
+    display: flex;
+    align-items: center;
+    margin-bottom: 40px;
+}
+
+.cart-container {
+    margin-top: 40px;
+}
+
+.cart-image-container {
+    margin-right: 30px;
+}
+
+.cart-image-container img {
+    width: 200px;
+    margin-left: 500px;
+    border: 3px solid #000; /* Add a border to the image */
+}
+
+.cart-info-container {
+    flex-grow: 1;
+    width: 400px;
+    margin-right: 100px;
+}
+
+.cart-price-container {
+    display: flex;
+    margin-left: 0px;
+    margin-right: 600px;
+
 }
