--- a/final-project/style.css
+++ b/final-project/style.css
@@ -2,6 +2,16 @@ body {
   background-color: #E0F2FF !important; 
 }
 
+.visually-hidden {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  padding: 0;
+  overflow: hidden;
+  clip: rect(0, 0, 0, 0);
+  border: 0;
+}
 
 Header .Header {
     font-size: 60px;
